Application/backend/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-backend
  labels:
    app: backend
  annotations:
    flux.weave.works/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-java
        image: 456433905815.dkr.ecr.us-east-2.amazonaws.com/backend:67f7dea
        ports:
        - containerPort: 8080
        resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 1024Mi
